--- a/Front/src/app/components/navbar/navbar.scss
+++ b/Front/src/app/components/navbar/navbar.scss
@@ -15,3 +15,18 @@ h1 {
 a:hover, a:focus {
   color: greenyellow;
 }
+
+
+.toolbar-separator {
+  height: 64px;
+  width: 1px;
+  background: rgba(0,0,0,.12);
+}
+
+.zp-server-name {
+  padding: 0 25px;
+}
+
+.zp-server-icon {
+  padding: 0 25px;
+}
