--- a/Front/src/app/components/sidebar/sidebar.scss
+++ b/Front/src/app/components/sidebar/sidebar.scss
@@ -35,3 +35,86 @@
     }
   }
 }
+
+.ms-navigation-item {
+  font-size: 12px;
+  font-weight: 500;
+  margin-top: 8px;
+  cursor: auto;
+  background: 0 0!important;
+  text-transform: uppercase;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ms-navigation-item {
+  > .ms-navigation-button.header-item {
+    height: 32px;
+    line-height: 32px;
+    color: rgba(255, 255, 255, .3);
+  }
+}
+.ms-navigation-button span {
+  white-space: nowrap;
+  overflow: hidden;
+  opacity: 1;
+  -webkit-transition: opacity .25s ease-in-out .1s;
+  transition: opacity .25s ease-in-out .1s;
+}
+
+.ms-navigation {
+  padding: 0;
+  margin: 0;
+  li, ul {
+    padding: 0;
+    margin: 0;
+  }
+}
+
+.ms-navigation-button:hover {
+  background: rgba(0,0,0,.1);
+}
+
+.ms-navigation-button {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 48px;
+  line-height: 48px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-right: 16px;
+  color: rgba(255,255,255,.7);
+  text-decoration: none;
+  white-space: nowrap;
+  overflow: hidden;
+  .icon {
+    color: rgba(255,255,255,.7);
+    margin: 0 16px 0 0;
+  }
+}
+.ms-navigation li.group .ms-navigation-button, .ms-navigation li.group li .ms-navigation-button {
+  padding-left: 24px;
+}
+
+.ms-navigation-item {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  color: rgba(255,255,255,.7);
+}
